Closed Bug 630056 Opened 12 years ago Closed 12 years ago

Don't throw on setting miterLimit and ignore non-positive values

Categories

(Core :: Graphics: Canvas2D, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla2.0b11
Webcompat Priority fixed
a11y-review fixed
Performance Impact fixed
Tracking Status
relnote-firefox --- fixed
thunderbird_esr91 fixed fixed
thunderbird_esr102 fixed fixed
firefox-esr102 fixed fixed
firefox111 fixed fixed
firefox112 fixed fixed
firefox113 fixed fixed

People

(Reporter: Ms2ger, Assigned: Ms2ger)

References

()

Details

(Keywords: dev-doc-complete, html5)

Attachments

(1 file, 1 obsolete file)

Attached patch Patch v1 (obsolete) — Splinter Review
This patch makes us pass

http://www.w3c-test.org/html/tests/approved/canvas/2d.line.miter.invalid.html
Flags: in-testsuite+
Attachment #508267 - Flags: review?(roc)
Keywords: checkin-needed
Whiteboard: [needs review]
Attachment #508267 - Attachment is obsolete: true
http://hg.mozilla.org/mozilla-central/rev/301997f0df62
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → mozilla2.0b11
Added note to:

https://developer.mozilla.org/en/DOM/CanvasRenderingContext2D#Notes

And listed the change on Firefox 4 for developers.
You need to log in before you can comment on or make changes to this bug.