Bug 630056 - Don't throw on setting miterLimit and ignore non-positive values; r+a=roc